# data-centric-synthetic-data

./: .gitignore  LICENSE  README.md  pyproject.toml  replicate_appendix.sh  replicate_main_paper.sh
.github/workflows/: test_tutorials.yml
data/figure1/adult/: bayesian_network.pkl  ctgan.pkl  ddpm.pkl  nflow.pkl  original_data.pkl  tvae.pkl
data/figure1/covid/: bayesian_network.pkl  ctgan.pkl  ddpm.pkl  nflow.pkl  original_data.pkl  tvae.pkl
data/simulated/features-10_samples-10000_corrange-0.7/: features-10_samples-10000_corrange-0.7_flipped-0.02.pkl  features-10_samples-10000_corrange-0.7_flipped-0.04.pkl  features-10_samples-10000_corrange-0.7_flipped-0.06.pkl  features-10_samples-10000_corrange-0.7_flipped-0.08.pkl  features-10_samples-10000_corrange-0.7_flipped-0.1.pkl  features-10_samples-10000_corrange-0.7_flipped-0.pkl
data/simulated/features-50_samples-10000_corrange-0.7/: features-50_samples-10000_corrange-0.7_flipped-0.02.pkl  features-50_samples-10000_corrange-0.7_flipped-0.04.pkl  features-50_samples-10000_corrange-0.7_flipped-0.06.pkl  features-50_samples-10000_corrange-0.7_flipped-0.08.pkl  features-50_samples-10000_corrange-0.7_flipped-0.1.pkl  features-50_samples-10000_corrange-0.7_flipped-0.pkl
notebooks/: main_experiment.ipynb
results/hparams/: bayesian_network.pkl  ctgan.pkl  ddpm.pkl  nflow.pkl  tvae.pkl
results/main_experiment/tmp/: aggregated_stat_fid.csv  normalized_stat_fid.csv
results/simulated/experiments/: features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.02.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.04.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.06.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.08.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.1.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.12000000000000001.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.13999999999999999.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.16.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.18.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.19999999999999998.pkl  features-10_samples-10000_corrange-0.7_yprop-0.5_flipped-0.pkl
src/application/: constants.py
src/application/data_centric_thresholds/: data_centric_thresholds_plots.py  data_centric_thresholds_table.py  run_data_centric_thresholds_exp.py
src/application/figure1/: evaluate_figure1.py  run_figure1_exp.py
src/application/image_experiment/: eval_image_experiment.py  run_image_experiment.py
src/application/main_experiment/: run_main_experiment.py  run_noise_experiment.py  run_org_data_postprocessing_experiment.py
src/application/stat_dist/: run_stat_metrics.py
src/application/synthcity_hparams/: get_best_params.py  optimize_model_hparams.py
src/data_centric_synth/: __init__.py  utils.py
src/data_centric_synth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data_centric_synth/causal_discovery/: dagma.py
src/data_centric_synth/data_models/: data_sculpting.py  experiment2.py  experiment3.py  experiments_common.py
(+936 files in other folders)
